# folder-declutter

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: publish.yml  release.yml
src/: main.rs  process_dir.rs
